fix(test): 리스트 첫 요소 접근을 getFirst()로 정리
- DefaultVacancyAlertNotification*Test에서 get(0) 호출을 getFirst()로 변경
- 동작 변화는 없음